--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>METAS MANZINHO</title>
+    <title>EpicTask - Sala</title>
     <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,73 +11,67 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <a href="/cadastrar.html" class="nes-btn is-primary">Nova Meta</a>
-
     <h1>METAS 2024</h1>
-    <!-- Frameworks de css -->
-    <!-- bootstrap -->
-    <!-- bulma css -->
-    <!-- pico css -->
-    <!-- semantic ui -->
-    <!-- nes.css -->
+    
+    <a href="/cadastrar.html" class="nes-btn is-primary">Nova tarefa</a>
 
-    <section id="lista-de-metas"> 
+    <section id="lista-de-tarefas"> 
         <div class="nes-container with-title is-centered">
-            <p class="title">Meta 01</p>
-            <p>MEter o shape</p>
+            <p class="title">Figma</p>
+            <p>Criar prototipo web</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">50</span>
+                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
+                <span class="is-primary">150</span>
             </a>
-            <progress class="nes-progress is-success" value="98" max="100"></progress>
+            <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Meta 02</p>
-            <p>Aprender russo</p>
+            <p class="title">Figma</p>
+            <p>Criar prototipo web</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">25</span>
+                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
+                <span class="is-primary">150</span>
             </a>
-            <progress class="nes-progress is-success" value="80" max="100"></progress>
+            <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Meta 03</p>
-            <p>aprender a andar de skate</p>
+            <p class="title">Figma</p>
+            <p>Criar prototipo web</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">15</span>
+                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
+                <span class="is-primary">150</span>
             </a>
-            <progress class="nes-progress is-success" value="55" max="100"></progress>
+            <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Meta 04</p>
-            <p>viajar pra Australia</p>
+            <p class="title">Figma</p>
+            <p>Criar prototipo web</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">10</span>
+                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
+                <span class="is-primary">150</span>
             </a>
-            <progress class="nes-progress is-success" value="20" max="100"></progress>
+            <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Meta 05</p>
-            <p>Surfar em um tubarão</p>
+            <p class="title">Figma</p>
+            <p>Criar prototipo web</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">20</span>
+                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
+                <span class="is-primary">150</span>
             </a>
-            <progress class="nes-progress is-success" value="10" max="100"></progress>
+            <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
             <button type="button" class="nes-btn is-primary">+</button>
