--- a/cadastrar.html
+++ b/cadastrar.html
@@ -12,19 +12,19 @@
     <script src="./assets/JS/cadastrar.js" defer></script>
 </head>
 <body>
-    <h1>Epic Task</h1>
+    <h1>METAS 2024</h1>
     <form action="">
 
-        <h2 class="nes-text is-primary">Cadastrar Tarefa</h2>
+        <h2 class="nes-text is-primary">Cadastrar Meta</h2>
 
         <div class="nes-field">
-            <label for="titulo">Titulo</label>
+            <label for="titulo">Titulo da meta:</label>
             <input type="text" id="titulo" class="nes-input">
             <span id="titulo-erro" class="nes-text is-error"></span>
         </div>
 
         <div class="nes-field"> 
-            <label for="descricao">Descrição</label>
+            <label for="descricao">Objetivo:</label>
             <textarea id="descricao" class="nes-textarea"></textarea>
             <span id="descricao-erro" class="nes-text is-error"></span>
         </div>
@@ -36,8 +36,8 @@
         </div>
 
         <div class="acoes">
-            <a href="/index.html" class="nes-btn is-error">Cancelar</a>
-            <button type="button" id="botao-cadastrar" class="nes-btn is-primary is-success">Salvar</button>
+            <a href="/index.html" class="nes-btn is-error">To de desculpinha</a>
+            <button type="button" id="botao-cadastrar" class="nes-btn is-primary is-success">Bater nova meta</button>
         </div>
     </form>
 </body>
