--- a/index.html
+++ b/index.html
@@ -11,17 +11,26 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>METAS 2024</h1>
-    
-    <a href="/cadastrar.html" class="nes-btn is-primary">Nova tarefa</a>
+    <section id="titulo-page">
+        <h1>METAS 2024</h1>
+        <i class="nes-bulbasaur"></i>
+    </section>
+
+    <div id="btn-add">
+        <a href="/cadastrar.html" class="nes-btn is-primary">Nova meta</a>
+    </div>
 
     <section id="lista-de-tarefas"> 
         <div class="nes-container with-title is-centered">
-            <p class="title">Figma</p>
-            <p>Criar prototipo web</p>
+            <p class="title">Meta 1</p>
+            <p>Aprender russo</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
-                <span class="is-primary">150</span>
+                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
+                <span class="is-primary">300</span>
+            </a>
+            <a href="#" class="nes-badge is-icon">
+                <span class="is-warning"><i class="nes-icon heart is-small"></i></span>
+                <span class="is-primary">30/05</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -29,11 +38,11 @@
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Figma</p>
-            <p>Criar prototipo web</p>
+            <p class="title">Meta 2</p>
+            <p>Meter o shape</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
-                <span class="is-primary">150</span>
+                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
+                <span class="is-primary">500</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -41,11 +50,11 @@
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Figma</p>
-            <p>Criar prototipo web</p>
+            <p class="title">Meta 3</p>
+            <p>Aprender andar de skate</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
-                <span class="is-primary">150</span>
+                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
+                <span class="is-primary">50</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -53,11 +62,11 @@
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Figma</p>
-            <p>Criar prototipo web</p>
+            <p class="title">Meta 4</p>
+            <p>Ir para a Australia</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
-                <span class="is-primary">150</span>
+                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
+                <span class="is-primary">200</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -65,11 +74,11 @@
             <button type="button" class="nes-btn is-primary">+</button>
         </div>
         <div class="nes-container with-title is-centered">
-            <p class="title">Figma</p>
-            <p>Criar prototipo web</p>
+            <p class="title">Meta 5</p>
+            <p>Comprar um carro</p>
             <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon coin is-small"></i></span>
-                <span class="is-primary">150</span>
+                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
+                <span class="is-primary">350</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
