--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <section id="lista-de-tarefas"> 
-        <div class="nes-container with-title is-centered">
+        <div class="nes-container with-title is-centered is-nivel">
             <p class="title">Meta 1</p>
             <p>Aprender russo</p>
             <a href="#" class="nes-badge is-icon">
