Alteracao e adicao no projeto

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <div id="btn-add">
         <a href="/cadastrar.html" class="nes-btn is-primary">Nova meta</a>
     </div>
+    <section id="progresso-geral">
+        <div>
+            <h3>Porgresso geral:</h3>
+            <progress class="nes-progress is-success" value="50" max="100"></progress>
+        </div>
+        <div>
+            <h3>Proximo vencimento de meta:</h3>
+            <span id="vencimento-meta" class="nes-text"></span>
+        </div>
+    </section>
 
     <section id="lista-de-tarefas"> 
         <div class="nes-container with-title is-centered is-nivel">
@@ -28,9 +38,8 @@
                 <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
                 <span class="is-primary">300</span>
             </a>
-            <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon heart is-small"></i></span>
-                <span class="is-primary">30/05</span>
+            <a href="#" class="nes-badge">
+                <span class="is-primary">20/06</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -44,6 +53,9 @@
                 <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
                 <span class="is-primary">500</span>
             </a>
+            <a href="#" class="nes-badge">
+                <span class="is-primary">20/06</span>
+            </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
@@ -55,6 +67,9 @@
             <a href="#" class="nes-badge is-icon">
                 <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
                 <span class="is-primary">50</span>
+            </a>
+            <a href="#" class="nes-badge">
+                <span class="is-primary">20/06</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -68,6 +83,9 @@
                 <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
                 <span class="is-primary">200</span>
             </a>
+            <a href="#" class="nes-badge">
+                <span class="is-primary">20/06</span>
+            </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
             <button type="button" class="nes-btn is-error">apagar</button>
@@ -79,6 +97,9 @@
             <a href="#" class="nes-badge is-icon">
                 <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
                 <span class="is-primary">350</span>
+            </a>
+            <a href="#" class="nes-badge">
+                <span class="is-primary">20/06</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
