--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 <body>
     <section id="titulo-page">
         <h1>METAS 2024</h1>
-        <i class="nes-bulbasaur"></i>
+        <a href="#" id="buba-id">
+            <p class="nes-balloon from-right">Ta em paz!</p>
+            <i class="nes-bulbasaur"></i>
+        </a>
     </section>
 
     <div id="btn-add">
         <a href="/cadastrar.html" class="nes-btn is-primary">Nova meta</a>
     </div>
+
     <section id="progresso-geral">
         <div>
             <h3>Porgresso geral:</h3>
@@ -54,7 +58,7 @@
                 <span class="is-primary">500</span>
             </a>
             <a href="#" class="nes-badge">
-                <span class="is-primary">20/06</span>
+                <span class="is-primary">20/07</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -69,7 +73,7 @@
                 <span class="is-primary">50</span>
             </a>
             <a href="#" class="nes-badge">
-                <span class="is-primary">20/06</span>
+                <span class="is-primary">20/04</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -84,7 +88,7 @@
                 <span class="is-primary">200</span>
             </a>
             <a href="#" class="nes-badge">
-                <span class="is-primary">20/06</span>
+                <span class="is-primary">20/05</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
@@ -99,7 +103,7 @@
                 <span class="is-primary">350</span>
             </a>
             <a href="#" class="nes-badge">
-                <span class="is-primary">20/06</span>
+                <span class="is-primary">20/09</span>
             </a>
             <progress class="nes-progress is-success" value="50" max="100"></progress>
             <button type="button" class="nes-btn is-primary">-</button>
