--- a/cadastrar.html
+++ b/cadastrar.html
@@ -12,7 +12,10 @@
     <script src="./assets/JS/cadastrar.js" defer></script>
 </head>
 <body>
-    <h1>METAS 2024</h1>
+    <section id="titulo-page">
+        <h1>METAS 2024</h1>
+        <i class="nes-bulbasaur"></i>
+    </section>
     <form action="">
 
         <h2 class="nes-text is-primary">Cadastrar Meta</h2>
