--- a/cadastrar.html
+++ b/cadastrar.html
@@ -16,8 +16,8 @@
         <h1>METAS 2024</h1>
         <i class="nes-bulbasaur"></i>
     </section>
-    <form action="">
 
+    <form action="">
         <h2 class="nes-text is-primary">Cadastrar Meta</h2>
 
         <div class="nes-field">
@@ -36,6 +36,12 @@
             <label for="pontos">Pontos</label>
             <input type="number" id="pontos" class="nes-input">
             <span id="pontos-erro" class="nes-text is-error"></span>
+        </div>
+
+        <div>
+            <label for="data">data</label>
+            <input type="date" id="data" class="nes-input">
+            <span id="data-erro" class="nes-text is-error"></span>
         </div>
 
         <div class="acoes">
