--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="titulo-page">
         <h1>METAS 2024</h1>
         <a href="#" id="buba-id">
-            <p class="nes-balloon from-right">Ta em paz!</p>
+            <p class="nes-balloon from-right">Meta atrazada em...</p>
             <i class="nes-bulbasaur"></i>
         </a>
     </section>
@@ -30,7 +30,7 @@
         </div>
         <div>
             <h3>Proximo vencimento de meta:</h3>
-            <span id="vencimento-meta" class="nes-text"></span>
+            <span id="vencimento-meta" class="nes-text is-error">Meta 3 - 20/04</span>
         </div>
     </section>
 
