--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="./assets/JS/carregar.js" defer></script>
+    <script src="./assets/JS/deletar.js" defer></script>
+
 </head>
 <body>
     <section id="titulo-page">
@@ -35,81 +38,7 @@
     </section>
 
     <section id="lista-de-tarefas"> 
-        <div class="nes-container with-title is-centered is-nivel">
-            <p class="title">Meta 1</p>
-            <p>Aprender russo</p>
-            <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">300</span>
-            </a>
-            <a href="#" class="nes-badge">
-                <span class="is-primary">20/06</span>
-            </a>
-            <progress class="nes-progress is-success" value="50" max="100"></progress>
-            <button type="button" class="nes-btn is-primary">-</button>
-            <button type="button" class="nes-btn is-error">apagar</button>
-            <button type="button" class="nes-btn is-primary">+</button>
-        </div>
-        <div class="nes-container with-title is-centered">
-            <p class="title">Meta 2</p>
-            <p>Meter o shape</p>
-            <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">500</span>
-            </a>
-            <a href="#" class="nes-badge">
-                <span class="is-primary">20/07</span>
-            </a>
-            <progress class="nes-progress is-success" value="50" max="100"></progress>
-            <button type="button" class="nes-btn is-primary">-</button>
-            <button type="button" class="nes-btn is-error">apagar</button>
-            <button type="button" class="nes-btn is-primary">+</button>
-        </div>
-        <div class="nes-container with-title is-centered">
-            <p class="title">Meta 3</p>
-            <p>Aprender andar de skate</p>
-            <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">50</span>
-            </a>
-            <a href="#" class="nes-badge">
-                <span class="is-primary">20/04</span>
-            </a>
-            <progress class="nes-progress is-success" value="50" max="100"></progress>
-            <button type="button" class="nes-btn is-primary">-</button>
-            <button type="button" class="nes-btn is-error">apagar</button>
-            <button type="button" class="nes-btn is-primary">+</button>
-        </div>
-        <div class="nes-container with-title is-centered">
-            <p class="title">Meta 4</p>
-            <p>Ir para a Australia</p>
-            <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">200</span>
-            </a>
-            <a href="#" class="nes-badge">
-                <span class="is-primary">20/05</span>
-            </a>
-            <progress class="nes-progress is-success" value="50" max="100"></progress>
-            <button type="button" class="nes-btn is-primary">-</button>
-            <button type="button" class="nes-btn is-error">apagar</button>
-            <button type="button" class="nes-btn is-primary">+</button>
-        </div>
-        <div class="nes-container with-title is-centered">
-            <p class="title">Meta 5</p>
-            <p>Comprar um carro</p>
-            <a href="#" class="nes-badge is-icon">
-                <span class="is-warning"><i class="nes-icon trophy is-small"></i></span>
-                <span class="is-primary">350</span>
-            </a>
-            <a href="#" class="nes-badge">
-                <span class="is-primary">20/09</span>
-            </a>
-            <progress class="nes-progress is-success" value="50" max="100"></progress>
-            <button type="button" class="nes-btn is-primary">-</button>
-            <button type="button" class="nes-btn is-error">apagar</button>
-            <button type="button" class="nes-btn is-primary">+</button>
-        </div>
+        
     </section>
 
 </body>
