--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="./assets/JS/carregar.js" defer></script>
     <script src="./assets/JS/deletar.js" defer></script>
+    <script src="./assets/JS/atualizar.js" defer></script>
 
 </head>
 <body>
