--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <script src="./assets/JS/carregar.js" defer></script>
     <script src="./assets/JS/deletar.js" defer></script>
     <script src="./assets/JS/atualizar.js" defer></script>
+    <script src="./assets/JS/cadastrar.js" defer></script>
 
 </head>
 <body>
     <section id="titulo-page">
         <h1>METAS 2024</h1>
         <a href="#" id="buba-id">
-            <p class="nes-balloon from-right">Meta atrazada em...</p>
+            <p class="nes-balloon from-right">Meta atrasada em...</p>
             <i class="nes-bulbasaur"></i>
         </a>
     </section>
@@ -30,11 +31,11 @@
     <section id="progresso-geral">
         <div>
             <h3>Porgresso geral:</h3>
-            <progress class="nes-progress is-success" value="0" max="0"></progress>
+            <progress class="nes-progress is-success" value="0" max="1"></progress>
         </div>
         <div>
             <h3>Proximo vencimento de meta:</h3>
-            <span id="vencimento-meta" class="nes-text is-error">Meta 3 - 20/04</span>
+            <span id="vencimento-meta" class="nes-text is-success">Tudo certo por aqui!</span>
         </div>
     </section>
 
